tests/expectations/compiler/function/function_returns_record_fail.out
DCE_ENABLED:
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:8:18
     |
   8 |     function foo(board: Board, data: u8) -> Board {
     |                  ^^^^^^^^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:8:45
     |
   8 |     function foo(board: Board, data: u8) -> Board {
     |                                             ^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:15:18
     |
  15 |     function bar(board: Board) {
     |                  ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:8:18
     |
   8 |     function foo(board: Board, data: u8) -> Board {
     |                  ^^^^^^^^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:8:45
     |
   8 |     function foo(board: Board, data: u8) -> Board {
     |                                             ^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:15:18
     |
  15 |     function bar(board: Board) {
     |                  ^^^^^^^^^^^^
